Updated ant build script to work with java 23