@@ -1,22 +1,31 @@
 <project name="DNSPlus" basedir="." default="main">
 
     <property name="src.dir"     value="src"/>
-
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="main-class"  value="simulator.Simulation"/>
 
-    <property name="main-class"  value="naming.RandomTest"/>
-
-
+    <!-- Dynamically set JAVA_HOME -->
+    <target name="set-java-home">
+        <!-- Use /usr/libexec/java_home to get the correct JDK 23 path -->
+        <exec executable="/usr/libexec/java_home" outputproperty="java.home">
+        </exec>
+        <echo message="JAVA_HOME set to: ${java.home}"/>
+        <property name="javac.executable" value="${java.home}/bin/javac"/>
+    </target>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
     </target>
 
-    <target name="compile">
+    <target name="compile" depends="set-java-home">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" executable="${javac.executable}" fork="true" includeantruntime="false">
+            <compilerarg value="--release"/>
+            <compilerarg value="23"/>
+            <compilerarg value="--enable-preview"/>
+        </javac>
     </target>
 
     <target name="jar" depends="compile">
